src/test/deca/context/invalid/improvided/ident_non_declare.deca
{
   // Description:
   //  test des défintions d'un identificateur
   //
   // Resultats:
   //  Erreur contextuelle
   //  Ligne 7: The given name does not correspond to any definition in EnvironementExp.
   x;
}
